# AtDSI

./: README.md
.github/workflows/: test_n_lint.yml
Python3/: .gitignore  README.md  pyproject.toml
Python3/.github/workflows/: test_n_lint.yml
Python3/atdsi/: tutil.py  types.py
Python3/atdsi/ch09_coding/: q01_intersection.py  q02_max_product.py  q03_find_closest_points.py
Python3/atdsi/chXX_own_playground/: q_mergesort.py
Python3/tests/: test_root_init_file.py
