[tool.poetry]
name = "atdsi"
version = "0.1.0"
description = "juanmirock's coding answers on AtDSI (1st-Edition) for Python3"
authors = ["Dr. Juan Miguel Cejuela <i@juanmi.rocks>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pyflakes = "^3.0.1"
bandit = "^1.7.5"
black = "^23.3.0"
pytest = "^7.4.0"

[tool.pytest.ini_options]
testpaths = [
  "atdsi/ch*/q*"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
